<resources>
    <string name="app_name">Food Deliver</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="what_chicken_type_do_you_like">What Chicken type do you like:</string>
    <string name="muwaffaq_imam">Muwaffaq Imam</string>
    <string name="what_ingredients_do_you_like">What ingredients do you like</string>
    <string name="show_vegetarian_settings">Show Vegetarian settings</string>
    <string name="what_food_ingredients_do_you_like">What food ingredients do you like:</string>
    <string name="done">Done</string>
    <string name="what_dessert_ingredients_do_you_like">What Dessert ingredients do you like:</string>
    <string name="pick_chicken_type_you_like">Pick Chicken Type you like</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_action">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_food_details">FoodDetails</string>
    <string name="user_info">User Info</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="edit">Edit</string>
    <string name="invoice">Invoice</string>
    <string name="because_you_like_spicy_food">Because you like spicy food</string>
    <string name="because_you_like_potato">Because you like Potato</string>
    <string name="step1">Pick a meal</string>
    <string name="step2">Pick a dessert</string>
    <string name="addLocation">Add location</string>
    <string name="order">Order</string>
    <string name="none">None</string>
    <string name="we_need_your_location_for_the_delivery">We need your location for the delivery</string>
    <string name="add_location">Add Location</string>
    <string name="enter_phone_number_to_recive_a_verification">Enter phone number to recive a verification code, it will be detected automatically</string>
    <string name="send_code">Send verification code</string>
    <string name="delete">Delete</string>
    <string name="qty_starter">1</string>
    <string name="meal_1">Meal 1</string>
    <string name="chicken">Chicken</string>
    <string name="toppings">Toppings</string>
    <string name="extras">Extras</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="meals">Meals</string>
    <string name="dessert">Dessert</string>
    <string name="info">Info</string>
    <string name="addresses">Addresses</string>
    <string name="orders">Orders</string>
    <string name="user_information">User Information</string>
    <string name="email">Email</string>
    <string name="change_number">Change Number</string>
    <string name="title_activity_foodle_assistant">FoodleAssistant</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="general">General</string>
    <string name="foodle_assistant">Foodle Assistant</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="complete_order">Complete Order</string>
    <string name="cart_qty">Quantity %d</string>
    <string name="foodle">Foodle</string>
    <string name="foodle_search">Foodle Search</string>
    <string name="foodle_drive">Foodle Drive</string>
    <string name="foodle_maps">Foodle Maps</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="price">Price</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="title_activity_sms_verification">SmsVerificationActivity</string>
    <string name="title_activity_profile_edit_info">ProfileEditInfoActivity</string>
    <string name="title_activity_foodle_assistant_ai">FoodleAssistantAI</string>
    <string name="type_something">type something...</string>
    <string name="moofi">Moofi</string>
    <string name="moofi_is_typing">Moofi is typing</string>

</resources>
