<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mfq.foodle.salah.Salah_AddLocationFragment"
    android:orientation="vertical"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/salah_add_location"
            android:tint="@color/colorAccent"
            android:tintMode="multiply"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_need_your_location_for_the_delivery"/>

        <com.mfq.foodle.coustemviews.BrandShapedButton
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/green">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/salah_add_number"
            android:layout_weight="1"/>
        <TextView
            style="@style/TextSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number_to_recive_a_verification"/>


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputFilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone"

            android:inputType="phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/salah_round_phone_in_talk_black_18dp"
                />

        </android.support.design.widget.TextInputLayout>
        <com.mfq.foodle.coustemviews.BrandShapedButton
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"

            />
    </LinearLayout>

</LinearLayout>
