<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_header_height"
            android:scaleType="centerCrop"
            android:src="@drawable/dessert6" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="75dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextSubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/user_info"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputFilled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/name"

                    android:inputType="textPersonName">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/salah_account"
                        android:drawablePadding="8dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputFilled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.6"
                    android:hint="@string/phone"
                    android:inputType="phone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/salah_phone"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputFilled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.6"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/salah_email"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</LinearLayout>
